--- a/Client/index.html
+++ b/Client/index.html
@@ -12,6 +12,9 @@
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 		<script src="js/header.js"></script>
+		<script src="js/login.js"></script>
+		<script src="js/logout.js"></script>
+		<script src="js/signup.js"></script>
 		
 	</head>
 
@@ -78,7 +81,6 @@
 						</div>
 					</form>
 				</div>
-				<script src="js/login.js"></script>
 			</article>
 			
 			<article id="logout" hidden="hidden">
@@ -87,7 +89,6 @@
 						<button type="button" class="logoutButton" id="logoutButton" value="Logout">Logout</button>
 					</form>
 				</div>-->
-				<script src="js/logout.js"></script>
 			</article>
 
 			<article id="signup" hidden="hidden">
