Added removed code back in
Removed code that was accidentally removed has been added back into the project, the PHP files have also been adjusted

--- a/Client/index.html
+++ b/Client/index.html
@@ -45,6 +45,10 @@
 				<a href="login" id="loginNavButton">Login</a>
 				<a href="logout" id="logoutNavButton">Logout</a>
 				<a href="signup" id="signupNavButton">Sign-Up</a>
+				<a href="account" id="accountNavButton">Account</a>
+				<a href="staff" id="staffNavButton">Staff</a>
+				<a href="cart" id="cartNavButton">Cart</a>
+				<a href="checkout" id="checkoutNavButton">Checkout</a>
 			
 
 				<div class="searchBar">
@@ -125,6 +129,22 @@
 						</div>
 					</form>
 				</div>
+			</article>
+
+			<article id="account" hidden="hidden">
+			
+			</article>
+			
+			<article id="staff" hidden="hidden">
+			
+			</article>
+			
+			<article id="cart" hidden="hidden">
+			
+			</article>
+			
+			<article id="checkout" hidden="hidden">
+				<!-- This may or may not need to exist, could be a part of the cart? Idk -->
 			</article>
 		</main>
 
