--- a/Client/index.html
+++ b/Client/index.html
@@ -85,7 +85,6 @@
 							<label class="loginLabel"> Password:</label>
 							<input type="password" name="formPassword" id="formPassword"/><br /><br />
 							
-							<!--<input type="submit" value="Login" id="loginButton"/>-->
 							<button type="button" class="submitLoginButton" id="submitLoginButton" value="Login">Login</button>
 						</div>
 					</form>
@@ -106,22 +105,31 @@
 						<div class="signupAlignment">
 							<label class="signupLabel" for="usernameInputSignup">Username:</label>
 							<input type="text" id="usernameInputSignup" name="usernameInputSignup"/><br />
+
 							<label class="signupLabel" for="passwordInputSignup">Password:</label>
 							<input type="password" id="passwordInputSignup" name="passwordInputSignup"/><br />
+
 							<label class="signupLabel" for="nameInputSignup">Name:</label>
 							<input type="text" id="nameInputSignup" name="nameInputSignup"/><br />
+
 							<label class="signupLabel" for="addressInputSignup">Address:</label>
 							<input type="text" id="addressInputSignup" name="addressInputSignup"/><br />
+
 							<label class="signupLabel" for="cityInputSignup">City:</label>
 							<input type="text" id="cityInputSignup" name="cityInputSignup"/><br />
+
 							<label class="signupLabel" for="stateInputSignup">State:</label>
 							<input type="text" id="stateInputSignup" name="stateInputSignup"/><br />
+
 							<label class="signupLabel" for="countryInputSignup">Country:</label>
 							<input type="text" id="countryInputSignup" name="countryInputSignup"/><br />
+
 							<label class="signupLabel" for="postcodeInputSignup">Postcode:</label>
 							<input type="text" id="postcodeInputSignup" name="postcodeInputSignup"/><br />
+
 							<label class="signupLabel" for="phoneInputSignup">Phone:</label>
 							<input type="text" id="phoneInputSignup" name="phoneInputSignup"/><br />
+
 							<label class="signupLabel" for="emailInputSignup">Email:</label>
 							<input type="text" id="emailInputSignup" name="emailInputSignup"/><br />
 						
@@ -132,7 +140,46 @@
 			</article>
 
 			<article id="account" hidden="hidden">
-			
+				<div id="accountFormContainer">
+					<form class="accountForm" method="POST" name="accountForm">
+						<div class="accountAlignment">
+							<h1>
+								Account Information
+							</h1>
+							<label class="accountLabel" for="accountUsername">Username:</label>
+							<input type="text" id="accountUsername" name="accountUsername"/><br />
+
+							<label class="accountLabel" for="accountPassword">Password:</label>
+							<input type="password" id="accountPassword" name="accountPassword"/><br />
+
+							<label class="accountLabel" for="accountName">Name:</label>
+							<input type="text" id="accountName" name="accountName"/><br />
+
+							<label class="accountLabel" for="accountAddress">Address:</label>
+							<input type="text" id="accountAddress" name="accountAddress"/><br />
+
+							<label class="accountLabel" for="accountCity">City:</label>
+							<input type="text" id="accountCity" name="accountCity"/><br />
+
+							<label class="accountLabel" for="accountState">State:</label>
+							<input type="text" id="accountState" name="accountState"/><br />
+
+							<label class="accountLabel" for="accountCountry">Country:</label>
+							<input type="text" id="accountCountry" name="accountCountry"/><br />
+
+							<label class="accountLabel" for="accountPostcode">Postcode:</label>
+							<input type="text" id="accountPostcode" name="accountPostcode"/><br />
+
+							<label class="accountLabel" for="accountPhone">Phone:</label>
+							<input type="text" id="accountPhone" name="accountPhone"/><br />
+
+							<label class="accountLabel" for="accountEmail">Email:</label>
+							<input type="text" id="accountEmail" name="accountEmail"/><br />
+
+							<button type="button" class="accountModifyButton" id="accountModifyButton" value="Save Changes">Save Changes</button>
+						</div>
+					</form>
+				</div>
 			</article>
 			
 			<article id="staff" hidden="hidden">
