--- a/Client/index.html
+++ b/Client/index.html
@@ -18,6 +18,7 @@
 		<script src="js/logout.js"></script>
 		<script src="js/signup.js"></script>
 		<script src="js/search.js"></script>
+		<script src="js/account.js"></script>
 	</head>
 
 	<body>
