Committed final version
Project's over and submitted but I thought I'd add the final version with some minor tweaks we made last minute. This is just in case there's any desire to look back on the project.

--- a/Client/index.html
+++ b/Client/index.html
@@ -57,6 +57,7 @@
 				<a href="account" id="accountNavButton">Account</a>
 				<a href="staff" id="staffNavButton">Staff</a>
 				<a href="cart" id="cartNavButton">Cart</a>
+				<a href="help" id="helpNavButton">Help</a>
 			
 
 				<div class="searchBar">
@@ -322,7 +323,75 @@
 				<div class="cartList">
 					<script src="js/dispCart.js"></script>
 				</div>
-			</article>	
+			</article>
+
+			<article id="help" hidden="hidden">
+				<h1>Help</h1>
+				<section>
+					<p>
+						This website runs as a single page application. Information will be
+						retrieved from the server asynchronously, meaning that you do not
+						have to repeatedly reload the page.
+					</p>
+				</section>
+				<section>
+					<h2>Navigation</h2>
+					<p>
+						In the site's header there is a navigation bar containing a list of
+						the names of all the available pages in the website. Clicking on one
+						of these names will take you to that page.
+					</p>
+				</section>
+				<section>
+					<h2>Login/Sign-Up</h2>
+					<p>
+						In order to login, simply navigate to the Login page and enter the
+						details of an existing user.
+					</p>
+					<p>
+						In order to sign-up, simply navigate to the Sign-Up page and enter
+						your details.
+					</p>
+					<p>
+						After logging in, your username will be displayed in the top right
+						of the window. To logout, click Logout in the navigation bar.
+					</p>
+				</section>
+				<section>
+					<h2>View Products</h2>
+					<p>
+						To view products, navigate to the Products page. You can then select
+						which types of products to show from the buttons at the top.
+					</p>
+				</section>
+				<section>
+					<h2>Search</h2>
+					<p>
+						To search products, enter a keyword into the search box next to the
+						navigation bar. This will take you to the Products page and display
+						all items matching the keyword in any part of their name and/or type.
+					</p>
+				</section>
+				<section>
+					<h2>Cart</h2>
+					<p>
+						To add items to the cart, hover over a product and click ADD TO CART.
+						Clicking it again will increase the quantity ordered for that
+						product. You can store an unlimited amount of products in your cart.
+						You can view your cart in the Cart page. To remove items from your
+						cart, press the x in the top right of the product in the Cart page.
+						A running total of the cart price is displayed above the checkout
+						button in the Cart page.
+					</p>
+				</section>
+				<section>
+					<h2>Checkout</h2>
+					<p>
+						To checkout all items in cart, navigate to the Cart page and click
+						CHECKOUT.
+					</p>
+				</section>
+			</article>
 		</main>
 
 		<footer>
